# ChangeLog for dev-php/libawl-php
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Sep 2008; lebarjack <francois.perichon@univ-lille2.fr>
  -libawl-php-0.29.ebuild, +libawl-php-0.31.ebuild:
  New version for awl (libawl-php)

  23 Jun 2008; lebarjack <francois.perichon@univ-lille2.fr>
  +libawl-php-0.29.ebuild, +metadata.xml:
  New ebuild for bug 229025 - (initial work by Cory Coager <ccoager@gmail.com>)
