@@ -1,3 +1,4 @@
-EBUILD libawl-php-0.31.ebuild 1064 RMD160 5061d70b00818ae25e766efcfaf166547c615eee SHA1 6ac282a6eec02ab96cda5e4a8565d619062bb4b9 SHA256 861369efde647e552b792384988d9d0a5bd1c3dd265c5a48605b6ce94c397e5f
-MISC ChangeLog 450 RMD160 efc10e97231ccfefc276f4908b26bd1c5b881efe SHA1 d75369248ede5f00898aec187c6e0e91309e1dc5 SHA256 2e7e5ac4b6d53a0f5b16c6e33664ebc5a417ed4de88e0f0cf2f707d04190c01a
+DIST awl_0.33.tar.gz 203192 RMD160 1a13d800c2dd1cac72c4febbf80f70785e46dad1 SHA1 19e6c4af01f1be3cba4ce0e5e139fa15051bd0f1 SHA256 ca3c5cb39b7071278ad55d0cee4bf169d55f49f8203137c93e2a64201ea52625
+EBUILD awl-0.33.ebuild 1068 RMD160 81997202403df8cb450cf37b2857189e56be7cab SHA1 307b107b6f96ddff678d09256fa942e9bbd304cc SHA256 eaa0cad9411c077b55b8887a062d4487ae6c481387b1913c0dc476c3002f612b
+MISC ChangeLog 628 RMD160 4cdb91ee08256ef77d0af103d103081f9c5aa231 SHA1 d0718b239c65cc7431aefce95065cfe08dd64657 SHA256 5533e6a903d31a6083981628d7e9f68d604cc3908e1abe2d539857109941e952
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
